--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "angular2-webpack-es6",
-  "version": "0.1.0",
-  "description": "Angular2 Webpack",
+  "name": "angular2-webpack2",
+  "version": "1.0.0",
+  "description": "angular 2 and webpack 2",
   "main": "",
   "scripts": {
     "start": "webpack-dev-server",
@@ -11,12 +11,11 @@
     "@angular/common": "^2.4.6",
     "@angular/compiler": "^2.4.6",
     "@angular/core": "^2.4.6",
+    "@angular/forms": "^2.4.6",
     "@angular/http": "^2.4.6",
     "@angular/platform-browser": "^2.4.6",
     "@angular/platform-browser-dynamic": "^2.4.6",
     "@angular/router": "^3.4.6",
-    "es6-promise": "4.0.5",
-    "es6-shim": "^0.35.3",
     "reflect-metadata": "0.1.9",
     "rxjs": "5.1.0",
     "zone.js": "^0.7.6"
@@ -26,7 +25,6 @@
     "babel-loader": "^6.2.10",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-preset-es2015": "6.22.0",
-    "clean-webpack-plugin": "^0.1.15",
     "css-loader": "^0.26.1",
     "file-loader": "^0.10.0",
     "html-webpack-plugin": "^2.28.0",
@@ -35,5 +33,15 @@
     "style-loader": "^0.13.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tatums/angular2-webpack2.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/tatums/angular2-webpack2/issues"
+  },
+  "homepage": "https://github.com/tatums/angular2-webpack2#readme"
 }
